// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsesListItem With link renders correctly 1`] = `
<li
  className="uses__list-item"
>
  <A
    href="https://apple.com"
    target="_blank"
    title={null}
  >
    Macbook Pro
  </A>
</li>
`;

exports[`UsesListItem Without link renders correctly 1`] = `
<li
  className="uses__list-item"
>
  Macbook Pro
</li>
`;
